--- a/repo/index.html
+++ b/repo/index.html
@@ -1,138 +1,40 @@
-<div id="title">Amethyl Cydia repo</div>
-<div id="content">
-<a href="cydia://url/https://cydia.saurik.com/api/share#?source=amethyl.github.com/repo/"><b>Open Cydia for me!</b></a><span id="ocy"></span><br><br>
-<hr>
-<h4>These are the packages on this repo</h4>
-<div id="samples" style="width:100%"></div>
-<script type="text/javascript">
-//Some fast iOS check.
-is_ios = (navigator.userAgent.match(/iPad/i) != null) || (navigator.userAgent.match(/iPhone/i) != null) || (navigator.userAgent.match(/iPod/i) != null);
-if (!is_ios) document.getElementById('ocy').innerHTML = ' Most probably, you will not be able to open Cydia.';
-
-//The functionality for the package list.
-function Apt_package() {
-	this.Package;
-	this.Version;
-	this.Section;
-	this.Installed_Size;
-	this.Description;
-	this.Name;
-	this.Author;
-	this.Filename;
-	this.Depiction;
-} //Constructor for Apt_package object.
-
-function parsePackage(string) { //TODO: Make sure no key is undefined
-	var a_package = new Apt_package();
-	var lines = string.split('\n');
-
-	var c;
-	for (c = 0; c < lines.length; ++c) {
-		var line = lines[c];
-		if (line.search(':') == -1) continue;
-
-		var components = line.split(':'); //Quick and dirty.
-		var key = components.shift();
-		var value = components.join(':').trim();
-
-		switch (key) {
-			case 'Package':
-				a_package.Package = value;
-				break;
-			case 'Version':
-				a_package.Version = value;
-				break;
-			case 'Section':
-				a_package.Section = value;
-				break;
-			case 'Installed-Size':
-				a_package.Installed_Size = value;
-				break;
-			case 'Description':
-				a_package.Description = value;
-				break;
-			case 'Name':
-				a_package.Name = value;
-				break;
-			case 'Author':
-				a_package.Author = value;
-				break;
-			case 'Filename':
-				a_package.Filename = value;
-				break;
-			case 'Depiction':
-				a_package.Depiction = value;
-				break;
-			default:
-				break; //Unknown key.
-		}
-	}
-
-	if (a_package.Package == undefined) return undefined;
-
-	return a_package;
-}
-
-function parsePackages(parse) {
-	var depictions = {};
-	while (parse.indexOf('\r') >= 0) parse = parse.replace('\r', ''); //Remove all carriage returns, which should not be there, anyways.
-
-	var packages = parse.split('\n\n');
-
-	for (var c = 0; c < packages.length; ++c) {
-		var a_package = parsePackage(packages[c]);
-
-		if (a_package == undefined) continue;
-
-		var pid = a_package.Package;
-
-		if (depictions[pid] && (parseFloat(a_package.Version) >= parseFloat(depictions[pid].Version))) { //Only keep the latest version.
-			depictions[pid] = a_package;
-		} else if (depictions[pid] == undefined) { //Package not added yet, add.
-			depictions[pid] = a_package;
-		}
-	}
-
-    return depictions;
-}
-
-var xhr;
-if (window.XMLHttpRequest) {
-    xhr = new XMLHttpRequest();
-} else if (window.ActiveXObject) {
-    xhr = new ActiveXObject('Microsoft.XMLHTTP');
-}
-
-xhr.onreadystatechange = function() {
-	if (!(xhr.readyState == 4)) return;
-
-	var depictionArray = parsePackages(xhr.responseText);
-	if (!depictionArray) return;
-
-	for (key in depictionArray) {
-		var pack = depictionArray[key];
-
-		//The following code is very messy. You have been warned.
-		document.getElementById('samples').innerHTML = document.getElementById('samples').innerHTML +
-			'<a href="javascript:var e = document.getElementById(\'u_' + pack.Package + '\'); e.style.display = e.style.display= (e.style.display == \'block\' ? \'none\' : \'block\');">' +
-			pack.Name + ' (' + pack.Version + ')</a><br>' +
-			'<div id="u_' + pack.Package + '" style="display:none;">' +
-			'&nbsp;&nbsp;' + pack.Description + '<br>' +
-			(is_ios ? '&nbsp;&nbsp;<a href="' +  'cydia://url/https://cydia.saurik.com/api/share#?source=http://h6nry.github.io/repo/&package=' + pack.Package + '" target="_blank">Show in Cydia.</a><br>' : '') +
-			'&nbsp;&nbsp;<a href="' + pack.Depiction + '" target="_blank">Show more info.</a><br>' +
-			'&nbsp;&nbsp;<a href="' + pack.Filename + '" target="_blank">Download the .deb package.</a><br><br>' +
-			'</div>';
-	}
-};
-
-xhr.open("GET","Packages");
-xhr.send();
-</script>
-</div>
-
-<!-- include this where you want the standard design template from here... -->
-<script type="text/javascript" src="../template.js"></script>
-<noscript>
-As this website uses JavaScript to generate a semi-dynamically created page, you need to activate JavaScript!
-</noscript>
-<!-- ...until here! -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html>
+    <head>
+        <title>Amethyl Repo</title>
+        <link rel="stylesheet" type="text/css" href="menes.css"/>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
+    </head>
+    <body class="pinstripe">
+        <panel>
+            <label>Setup Instructions</label>
+            <fieldset>
+                <div>
+                    <ol style="margin-left:25px">
+                        <li>Open <strong>Cydia</strong></li>
+                        <li>Tap the <strong>Manage</strong> tab</li>
+                        <li>Tap <strong>Sources</strong></li>
+                        <li>Tap the <strong>Edit</strong> button</li>
+                        <li>Tap the <strong>Add</strong> button</li>
+                        <li>Type: <strong>amethyl.github.io/repo/</strong></li>
+                        <li>Tap <strong>Add Source</strong></li>
+                    </ol>
+                </div>
+                <div style="background:#FEE; -moz-border-radius-bottomleft: 9px; -webkit-border-bottom-left-radius: 9px; -moz-border-radius-bottomright: 9px; -webkit-border-bottom-right-radius: 9px;">
+                    <p>This repository is for testing only!</p>
+                </div>
+            </fieldset>
+        </panel>
+        <panel>
+            <label>Have Cydia Installed?</label>
+            <fieldset>
+                <a href="cydia://sources">
+                    <div>
+                        <label>Launch Cydia &amp; Add</label>
+                    </div>
+                </a>
+            </fieldset>
+        </panel>
+    </body>
+</html>
