--- a/repo/index.html
+++ b/repo/index.html
@@ -12,11 +12,10 @@
             <fieldset>
                 <div>
                     <ol style="margin-left:25px">
-                        <li>Open <strong>Cydia</strong></li>
+                        <li>Open <strong>Sileo</strong></li>
                         <li>Tap the <strong>Manage</strong> tab</li>
                         <li>Tap <strong>Sources</strong></li>
-                        <li>Tap the <strong>Edit</strong> button</li>
-                        <li>Tap the <strong>Add</strong> button</li>
+                        <li>Tap the <strong>Add(+)</strong> button</li>
                         <li>Type: <strong>amethyl.github.io/repo/</strong></li>
                         <li>Tap <strong>Add Source</strong></li>
                     </ol>
@@ -27,11 +26,11 @@
             </fieldset>
         </panel>
         <panel>
-            <label>Have Cydia Installed?</label>
+            <label>Have Sileo Installed click here to add the repo?</label>
             <fieldset>
-                <a href="cydia://sources">
+                <a href="sileo://source/https://amethyl.github.io/repo/">
                     <div>
-                        <label>Launch Cydia &amp; Add</label>
+                        <label>Launch Sileo &amp; Add</label>
                     </div>
                 </a>
             </fieldset>
