--- a/repo/index.html
+++ b/repo/index.html
@@ -26,7 +26,7 @@
             </fieldset>
         </panel>
         <panel>
-            <label>Have Sileo Installed click here to add the repo?</label>
+            <label>Have Sileo Installed?</label>
             <fieldset>
                 <a href="sileo://source/https://amethyl.github.io/repo/">
                     <div>
